--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,14 @@ clap = { version = "4.5.30", features = ["derive", "cargo"] }
 clap-verbosity-flag = "3.0.2"
 derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
 itertools = "0.14.0"
+hugr-core = { version = "0.14.3", features = ["model_unstable"] }
+hugr-model = { version = "0.17.1" }
 hugr = { version = "0.14.3", features = ["llvm"] }
 log = "0.4.25"
 env_logger = "0.11.6"
 strum = { version = "0.27.1", features = ["derive"] }
 semver = "1.0.25"
+bumpalo = "3.17.0"
 
 [dev-dependencies]
 insta = "1.42.1"
