--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ name = "guppyc"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.95"
+hugr-qir = { git = "https://github.com/cqcl/hugr-qir.git", rev = "50bcdff", default-features = false }
+anyhow = "1.0.96"
 clap = { version = "4.5.30", features = ["derive", "cargo"] }
 clap-verbosity-flag = "3.0.2"
 derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
